@@ -15,6 +15,8 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Fixed
 
+* Fix errors in some LXC checks: list only active LXC containers, add conditions to filter containers that are not in evo-standards.
+
 ## [24.01] 2024-01-03
 
 ### Added
